# Helix

./: .gitignore  AGENTS.md  LICENSE  README.md  pattern-index-signal-consistency-review(gpt).md  pyproject.toml  routing-vs-pattern-signal-consistency(glm).md  setup_extract_deps.sh
.claude/: .codex
.codex/: config.toml
docs/: 2026-03-31-codex-ephemeral-git-check-flags.md  2026-03-31-default-mode-values.md  2026-03-31-opencode-backend.md  2026-03-31-optimize-pattern-directory.md  2026-03-31-optimize-pattern-expansion.md  2026-03-31-optimize-pattern-index.md  2026-03-31-optimize-skill-redesign.md  2026-03-31-optimize-workspace-agents.md  2026-03-31-skill-command-script.md  2026-03-31-skill-link-idempotent-symlinks.md  2026-03-31-test-mode-selection.md  2026-03-31-triton-agent-cli.md  2026-04-01-compare-perf-subcommand.md  2026-04-01-generated-harness-metadata.md  2026-04-01-remote-agent-command-context.md  2026-04-02-ascend-npu-operator-profiler-skill.md  2026-04-02-bugfix-regressions.md  2026-04-02-generated-harness-pytorch-entrypoints.md  2026-04-02-msprof-parse-bin-no-tabulate.md  2026-04-02-optimize-continue-mode.md  2026-04-02-optimize-min-rounds.md  2026-04-02-unified-run-skill.md  2026-04-02-workspace-placeholder-exclusion.md  2026-04-03-batch-optimize-subcommand.md  2026-04-03-claude-backend.md  2026-04-03-optimize-no-agent-session.md  2026-04-03-pyright-strict-src-scope.md  2026-04-03-remote-profiler-support.md  2026-04-07-ascend-operator-ir-analyzer-skill.md  2026-04-07-cli-generation-refactor.md  2026-04-07-cli-optimize-refactor-layering.md  2026-04-07-optimize-status-subcommand.md  2026-04-08-inspect-ir-ranking-and-change-scan.md  2026-04-08-inspect-ir-script.md  2026-04-08-ir-dir-flag-alignment.md  2026-04-08-opt-note-overall-summary.md  2026-04-08-optimize-round-failure-handling-name.md  2026-04-16-design-doc-review.md  README.md
docs_cc/: triton-agent-knowledge-base.md
packaging/: helix.spec  triton-agent.spec
scripts/: build-claude-optimize-plugin.py  build-pyinstaller.py  check-skill-scripts.sh  compare_result_payloads.py  run-skill-script-pyright.sh  update-optimize-knowledge-indices.sh
services/triton-agent-upload-server/: README.md  pyproject.toml
services/triton-agent-upload-server/src/triton_agent_upload_server/: app.py  config.py  dedup.py  naming.py  routes.py  storage.py
services/triton-agent-upload-server/tests/: test_healthz.py  test_naming.py  test_storage.py  test_upload_route.py
tests/: run_skill_test_utils.py  test_agent_hooks.py  test_ascend_npu_operator_profiler.py  test_ascend_operator_ir_analyzer.py  test_audit_batch_evidence.py  test_backends_base.py  test_backends_factory.py  test_batch_evaluation.py  test_batch_utils.py  test_bench_runner.py  test_build_info.py  test_claude_optimize_plugin.py  test_claude_optimize_plugin_hooks.py  test_claude_runner.py  test_claude_trace.py  test_cleaning.py  test_cli.py  test_codex_pretooluse_guard.py  test_codex_runner.py  test_codex_trace.py  test_commit_perf_analysis_launcher.py  test_commit_perf_context.py  test_commit_perf_group_by_file.py  test_comparison_commands.py  test_compiler_source.py  test_convert_commands.py  test_diff_skills_update_cli.py  test_diff_skills_update_discovery.py  test_diff_skills_update_skills_workspace.py  test_diff_skills_update_workflow.py  test_distill_cli.py  test_distill_discovery.py  test_distill_knowledge_workspace.py  (+98 more)
(+1736 files in other folders)
