[project]
name = "triton-agent"
version = "0.1.0"
description = "CLI wrapper for Triton Ascend NPU operator agent workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openhands-sdk; python_version >= '3.12'",
    "openhands-tools; python_version >= '3.12'",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.11.0",
]

[project.scripts]
triton-agent = "triton_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
exclude = ["workspace"]

[tool.ruff.lint]
per-file-ignores = {"tests/*.py" = ["E402"]}

[tool.pyright]
pythonVersion = "3.9"
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "skills",
    "workspace",
    "src/triton_agent.egg-info",
]
extraPaths = ["src"]
typeCheckingMode = "basic"
strict = ["src"]
