[project]
name = "triton-agent"
version = "0.1.0"
description = "CLI wrapper for Triton Ascend NPU operator agent workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openhands-sdk; python_version >= '3.12'",
    "openhands-tools; python_version >= '3.12'",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8.4,<9",
    "pyright>=1.1.400",
    "ruff>=0.11.0",
]

[project.scripts]
triton-agent = "triton_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.cmdclass]
build_py = "triton_agent._setuptools_hooks.BuildPyWithMeta"
sdist = "triton_agent._setuptools_hooks.SdistWithMeta"

[tool.ruff]
target-version = "py39"
exclude = ["workspace"]

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
"skills/tilelang/tilelang-npu-cann-ext-api-patterns/scripts/tl_sync_lint.py" = ["E741"]
"skills/tilelang/tilelang-npu-cann-ext-api-patterns/scripts/tl_sync_mem.py" = ["F401"]
"skills/tilelang/tilelang-npu-cann-ext-api-patterns/scripts/tl_sync_prime.py" = ["E741"]

[tool.pyright]
pythonVersion = "3.9"
include = ["src", "tests", "skills/*/scripts"]
exclude = [
    "**/__pycache__",
    "workspace",
    "src/triton_agent.egg-info",
]
extraPaths = ["src", "skills/common/ascend-npu-run-eval/scripts"]
typeCheckingMode = "basic"
strict = ["src"]
