[project]
name = "triton-agent-upload-server"
version = "0.1.0"
description = "Upload server for Triton NPU optimize workspace analysis."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.scripts]
triton-agent-upload-server = "triton_agent_upload_server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
